--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.1",
   "description": "",
   "main": ".eslintrc.js",
+  "files": [
+    "dist",
+    "es",
+    "lib"
+  ],
   "peerDependencies": {
     "react": ">=17.0.0"
   },
