--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "fydatagrid",
   "version": "1.0.2",
   "description": "",
-  "main": ".eslintrc.js",
+  "main": "lib/index.js",
+  "module": "es/index.js",
   "files": [
     "dist",
     "es",
