--- a/package.json
+++ b/package.json
@@ -84,8 +84,8 @@
     "type": "git",
     "url": "git+https://github.com/fangyuchi/fyDatagrid.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "fangyuhci",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/fangyuchi/fyDatagrid/issues"
   },
